# immuni-app-metrics-uploader

./: .coveragerc  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: models.py  settings.py  tasks.py
app/core/: models.py
app/tests/: test_models.py
app/uploaders/: __init__.py  googledrive.py  uploader.py
tests/: test_models.py
tests/metrics_sample/: android.csv  invalid.csv  ios.csv  not_valid.ios.csv  not_valid_android.csv
