[tool.poetry]
name = "immuni-app-metrics-uploader"
version = "0.1.0"
description = "Immuni app metrics uploader for dashboard"
authors = []

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
black = "^20.8b1"
flake8 = "^3.8.4"
coverage = "^5.3.1"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
